<resources>
    <string name="app_name">LocadoraFilmes</string>
    <string name="title_activity_tela_principal">TelaPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Locadora de Filmes</string>
    <string name="nav_header_subtitle">Developed by Pedro Botelho</string>
    <string name="nav_header_desc">Navigation header</string>

    //MENU STRINGS
    <string name="menu_pessoas">Cadastro Pessoas</string>
    <string name="menu_pessoas_consulta">Consulta Pessoas</string>
    <string name="menu_filmes">Cadastro Filmes</string>
    <string name="menu_locacao">Cadastro Locação</string>

    //FRAGMENT PESSOA
    <string name="fragment_pessoas_title">Cadastro de Pessoas</string>
    <string name="fragment_pessoas_nome">Nome</string>
    <string name="fragment_pessoas_cpf">CPF</string>
    <string name="fragment_pessoas_data">Data de Nascimento</string>
    <string name="fragment_pessoas_telefone">Telefone</string>
    <string name="fragment_pessoas_btncadastrar">Cadastrar</string>

    //FRAGMENT CONSULTA PESSOA
    <string name="fragment_consulta_pessoas_title">Consulta de Pessoas</string>
    <string name="fragment_consulta_pessoas_autonome">Nome da Pessoa a ser Pesquisada</string>
    <string name="fragment_consulta_pessoas_btnprocurar">Procurar</string>
    <string name="fragment_consulta_pessoas_btnalterar">Alterar</string>
    <string name="fragment_consulta_pessoas_btnexcluir">Excluir</string>

    //FRAGMENT FILME
    <string name="fragment_filmes_genero">Gênero</string>
    <string name="fragment_filmes_classificacao">Classificação Indicativa:</string>
    <string name="fragment_filmes_valor">Valor</string>
    <string name="fragment_filmes_duracao">Duração (em horas)</string>

    //FRAGMENT CONSULTA FILME
    <string name="fragment_consulta_filmes_title">Consulta de Filmes</string>
    <string name="fragment_consulta_filmes_autonome">Nome do Filme a ser Pesquisado</string>
    <string name="fragment_consulta_filmes_disponivel">Filme Disponível</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //FRAGMENT LOCACAO
    <string name="fragment_locacao_title">Cadastro de Locação</string>
    <string name="fragment_locacao_nome_pessoa">Nome Pessoa</string>
    <string name="fragment_locacao_nome_filme">Nome Filme</string>
    <string name="fragment_locacao_data_aluga">Data de Aluguel</string>
    <string name="fragment_locacao_data_devolucao">Data Devolucao</string>


</resources>