<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pessoas"
            android:icon="@drawable/ic_menu_pessoas"
            android:title="@string/menu_pessoas"/>

        <item
            android:id="@+id/nav_pessoas_consulta"
            android:icon="@drawable/ic_menu_pessoas_consulta"
            android:title="@string/menu_pessoas_consulta"/>

        <item
            android:id="@+id/nav_filmes"
            android:icon="@drawable/ic_menu_filmes"
            android:title="@string/menu_filmes"
            />

        <item
            android:id="@+id/nav_filmes_consulta"
            android:icon="@drawable/ic_menu_pessoas_consulta"
            android:title="@string/fragment_consulta_filmes_title"
            />

        <item
            android:id="@+id/nav_locacao"
            android:title="@string/menu_locacao"
            android:icon="@drawable/ic_menu_filmes_consulta"
            />

    </group>
</menu>