<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pessoas.PessoasFragment">

    <TextView
        android:id="@+id/txtview_cadastro_pessoas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/fragment_pessoas_title"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_pessoas_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/fragment_pessoas_nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_cadastro_pessoas" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/edt_pessoas_cpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fragment_pessoas_cpf"
        android:inputType="number"
        app:maskCharacter="_"
        app:maskStyle="completable"
        app:mask="___.___.___-__"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pessoas_nome" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/edt_pessoas_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fragment_pessoas_data"
        android:inputType="number"
        app:maskCharacter="_"
        app:maskStyle="completable"
        app:mask="__/__/____"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pessoas_cpf" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/edt_pessoas_telefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fragment_pessoas_telefone"
        android:inputType="number"
        app:maskCharacter="_"
        app:maskStyle="completable"
        app:mask="(__) _____-____"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pessoas_data" />

    <Button
        android:id="@+id/btn_pessoas_cadastrar"
        android:layout_width="123dp"
        android:layout_height="71dp"
        android:layout_marginTop="108dp"
        android:text="@string/fragment_pessoas_btncadastrar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pessoas_telefone" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>