<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.locacao.LocacaoFragment">

    <TextView
        android:id="@+id/txtview_cadastro_locacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_locacao_title"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/autoedt_locacao_pessoas_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/fragment_locacao_nome_pessoa"
        android:inputType="text"
        android:completionThreshold="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_cadastro_locacao" />

    <AutoCompleteTextView
        android:id="@+id/autoedt_locacao_filme_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/fragment_locacao_nome_filme"
        android:inputType="text"
        android:completionThreshold="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoedt_locacao_pessoas_nome" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/edt_locacao_data_aluga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fragment_locacao_data_aluga"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="number"
        app:maskCharacter="_"
        app:maskStyle="completable"
        app:mask="__/__/____"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoedt_locacao_filme_nome" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/edt_locacao_data_devolucao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fragment_locacao_data_devolucao"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="number"
        app:maskCharacter="_"
        app:maskStyle="completable"
        app:mask="__/__/____"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_locacao_data_aluga" />

    <EditText
        android:id="@+id/edt_locacao_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/fragment_filmes_valor"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_locacao_data_devolucao" />

    <Button
        android:id="@+id/btn_locacao_cadastrar"
        android:layout_width="123dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_pessoas_btncadastrar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_locacao_valor" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>