<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_pessoas">

    <fragment
        android:id="@+id/nav_pessoas"
        android:name="com.example.locadorafilmes.ui.pessoas.PessoasFragment"
        android:label="Cadastro Pessoas"
        tools:layout="@layout/fragment_pessoas"/>

    <fragment
        android:id="@+id/nav_pessoas_consulta"
        android:name="com.example.locadorafilmes.ui.pessoas.PessoasConsultaFragment"
        android:label="Relatório Pessoas"
        tools:layout="@layout/fragment_pessoas_consulta"
        />

    <fragment
        android:id="@+id/nav_filmes"
        android:name="com.example.locadorafilmes.ui.filmes.FilmesFragment"
        android:label="@string/menu_filmes"
        tools:layout="@layout/fragment_filmes"
        />

    <fragment
        android:id="@+id/nav_filmes_consulta"
        android:name="com.example.locadorafilmes.ui.filmes.FilmesConsultaFragment"
        android:label="@string/fragment_consulta_filmes_title"
        tools:layout="@layout/fragment_filmes_consulta"
        />

    <fragment
        android:id="@+id/nav_locacao"
        android:name="com.example.locadorafilmes.ui.locacao.LocacaoFragment"
        android:label="@string/menu_locacao"
        tools:layout="@layout/fragment_locacao"
        />

</navigation>